Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-19945

tunefs.lustre/mkfs.lustre -q cannot suppress output

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Medium Medium
    • Lustre 2.18.0
    • None
    • None
    • 3
    • 9223372036854775807

      tunefs.lustre/mkfs.lustre -q cannot suppress output as below:

      # tunefs.lustre -q /dev/nvme0n1 
      checking for existing Lustre data: found   Read previous values:
      Target:     MGS
      Index:      unassigned
      Lustre FS:  test
      Mount type: ldiskfs
      Flags:      0x4
                    (MGS )
      Persistent mount opts: user_xattr,errors=remount-ro
      Parameters:
         Permanent disk data:
      Target:     MGS
      Index:      unassigned
      Lustre FS:  test
      Mount type: ldiskfs
      Flags:      0x4
                    (MGS )
      Persistent mount opts: user_xattr,errors=remount-ro
      Parameters: 
      
      # mkfs.lustre -q --reformat --fsname=test --mgs /dev/nvme0n1
      
         Permanent disk data:
      Target:     MGS
      Index:      unassigned
      Lustre FS:  test
      Mount type: ldiskfs
      Flags:      0x64
                    (MGS first_time update )
      Persistent mount opts: user_xattr,errors=remount-ro
      Parameters:

            xyang Xiao Yang
            xyang Xiao Yang
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: