LU-19945 utils: Make {tunefs,mkfs}.lustre -q work properly

{tunefs,mkfs}.lustre -q should suppress output as expected.
For example:
    # tunefs.lustre -q /dev/nvme0n1
     <nothing>
    # mkfs.lustre -q --reformat --fsname=test --mgs /dev/nvme0n1
     <nothing>

Signed-off-by: Xiao Yang <xyang@ddn.com>
Change-Id: I0527791f2276565898a556735cc6959f3cc83d57
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/64349
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: jenkins <devops@whamcloud.com>